tests/paczka1/small_fuzzy/29999294.err
Error in line 7: nfI A619 92,3
Error in line 11: S949 A657 70,1
